# ai-news-aggregator

./: pyproject.toml  railway.toml  render.yaml  vercel.json
.github/workflows/: ai-news-cron.yml  ai-news-hourly.yml
ai-news-dashboard/frontend/: package-lock.json  package.json
ai-news-dashboard/frontend/src/app/: layout.tsx  page.tsx
ai-news-dashboard/frontend/src/app/api/articles/: route.ts
ai-news-dashboard/frontend/src/app/api/auth/[...nextauth]/: route.ts
ai-news-dashboard/frontend/src/app/api/get-time/: route.ts
ai-news-dashboard/frontend/src/app/api/notification-settings/: route.ts
ai-news-dashboard/frontend/src/app/api/sync-time/: route.ts
ai-news-dashboard/frontend/src/app/api/tts/: route.ts
ai-news-dashboard/frontend/src/app/components/: Header.tsx  NewsTrendsCharts.tsx  NotificationSettings.tsx
ai-news-dashboard/frontend/src/app/hooks/: useReadingTimer.ts
ai-news-dashboard/frontend/src/app/types/: articles.ts
api/: index.py
app/: main.py
app/scrapers/: article_fetcher.py  rss_scraper.py
app/services/: ai_summarizer.py  article_parser.py  database.py  email_formatter.py  email_service.py  normalizer.py  relevance.py
backend/: main.py
data/: news.db
