[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "feedparser>=6.0.12",
    "groq>=1.0.0",
    "psycopg[binary]>=3.3.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "uvicorn>=0.40.0",
]
